--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="D:\shamil's portfolio\styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Portfolio Website</title>
 </head>
 <body>
     <header>
 
         <nav>
-            <a href="D:\shamil's portfolio\index.html" class="active"> Home</a>
-            <a href="D:\shamil's portfolio\mywork.html" >Designs</a>
-            <a href="D:\shamil's portfolio\contact-form.html" >Contact</a>
+            <a href="index.html" class="active"> Home</a>
+            <a href="mywork.html" >Designs</a>
+            <a href="contact-form.html" >Contact</a>
 
         </nav>
     </header>
@@ -29,7 +29,7 @@
                 <a href="https://www.linkedin.com/in/mohammed-shamil-8b7944371?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app "><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/shamil__urothodi?igsh=bXI5OGVldGk5OGFx"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="D:\shamil's portfolio\contact-form.html" class="btn">Hire me</a>
+            <a href="contact-form.html" class="btn">Hire me</a>
         </div>
 
         <div class="about-main">
@@ -84,4 +84,5 @@
     </script> 
     </section>   
 </body>
+
 </html>
