--- a/mywork.html
+++ b/mywork.html
@@ -170,43 +170,44 @@ body {
     <h1 class="socail-post-heading">Social Media Posters</h1>
 
     <div class="gallery-1">
-      <div class="img-box"><img src="assets\-1.jpg" alt="Design 1"></div>
-      <div class="img-box"><img src="assets\-2.jpg" alt="Design 2"></div>
-      <div class="img-box"><img src="assets\-3.jpg" alt="Design 3"></div>
-      <div class="img-box"><img src="assets\-4.jpg" alt="Design 4"></div>
-      <div class="img-box"><img src="assets\-5.jpg" alt="Design 5"></div>
-      <div class="img-box"><img src="assets\-6.jpg" alt="Design 6"></div>
-      <div class="img-box"><img src="assets\-7.jpg" alt="Design 7"></div>
-      <div class="img-box"><img src="assets\-8.jpg" alt="Design 8"></div>
-      <div class="img-box"><img src="assets\-9.jpg" alt="Design 9"></div>
-      <div class="img-box"><img src="assets\-10.jpg" alt="Design 10"></div>
-      <div class="img-box"><img src="assets\-11.jpg" alt="Design 11"></div>
-      <div class="img-box"><img src="assets\-13.jpg" alt="Design 12"></div>
-      <div class="img-box"><img src="assets\-14.jpg" alt="Design 13"></div>
-      <div class="img-box"><img src="assets\-15.jpg" alt="Design 14"></div>
-      <div class="img-box"><img src="assets\-16.jpg" alt="Design 15"></div>
-      <div class="img-box"><img src="assets\-17.jpg" alt="Design 16"></div>
-      <div class="img-box"><img src="assets\-18.jpg" alt="Design 17"></div>
-      <div class="img-box"><img src="assets\-19.jpg" alt="Design 18"></div>
-      <div class="img-box"><img src="assets\-20.jpg" alt="Design 19"></div>
-      <div class="img-box"><img src="assets\-21.jpg" alt="Design 20"></div>
-      <div class="img-box"><img src="assets\-22.jpg" alt="Design 21"></div>
-      <div class="img-box"><img src="assets\-23.jpg" alt="Design 22"></div>
-      <div class="img-box"><img src="assets\-24.jpg" alt="Design 23"></div>
-      <div class="img-box"><img src="assets\-25.jpg" alt="Design 24"></div>
-      <div class="img-box"><img src="assets\-26.jpg" alt="Design 25"></div>
-      <div class="img-box"><img src="assets\-27.jpg" alt="Design 26"></div>
+      <div class="img-box"><img src="assets/d1.jpg" alt="Design 1"></div>
+      <div class="img-box"><img src="assets/d2.jpg" alt="Design 2"></div>
+      <div class="img-box"><img src="assets/d3.jpg" alt="Design 3"></div>
+      <div class="img-box"><img src="assets/d4.jpg" alt="Design 4"></div>
+      <div class="img-box"><img src="assets/d5.jpg" alt="Design 5"></div>
+      <div class="img-box"><img src="assets/d6.jpg" alt="Design 6"></div>
+      <div class="img-box"><img src="assets/d7.jpg" alt="Design 7"></div>
+      <div class="img-box"><img src="assets/d8.jpg" alt="Design 8"></div>
+      <div class="img-box"><img src="assets/d9.jpg" alt="Design 9"></div>
+      <div class="img-box"><img src="assets/d10.jpg" alt="Design 10"></div>
+      <div class="img-box"><img src="assets/d11.jpg" alt="Design 11"></div>
+      <div class="img-box"><img src="assets/d13.jpg" alt="Design 12"></div>
+      <div class="img-box"><img src="assets/d14.jpg" alt="Design 13"></div>
+      <div class="img-box"><img src="assets/d15.jpg" alt="Design 14"></div>
+      <div class="img-box"><img src="assets/d16.jpg" alt="Design 15"></div>
+      <div class="img-box"><img src="assets/d17.jpg" alt="Design 16"></div>
+      <div class="img-box"><img src="assets/d18.jpg" alt="Design 17"></div>
+      <div class="img-box"><img src="assets/d19.jpg" alt="Design 18"></div>
+      <div class="img-box"><img src="assets/d20.jpg" alt="Design 19"></div>
+      <div class="img-box"><img src="assets/d21.jpg" alt="Design 20"></div>
+      <div class="img-box"><img src="assets/d22.jpg" alt="Design 21"></div>
+      <div class="img-box"><img src="assets/d23.jpg" alt="Design 22"></div>
+      <div class="img-box"><img src="assets/d24.jpg" alt="Design 23"></div>
+      <div class="img-box"><img src="assets/d25.jpg" alt="Design 24"></div>
+      <div class="img-box"><img src="assets/d26.jpg" alt="Design 25"></div>
+      <div class="img-box"><img src="assets/d27.jpg" alt="Design 26"></div>
     </div>
       <br>
       <h1 class="logo-heading">Logo Designs</h1>
       <br>
     <div class="gallery-2">
-      <div class="img-box"><img src="assets\logo1.jpg" alt="Design 27"></div>
-      <div class="img-box"><img src="assets\logo2.jpg" alt="Design 28"></div>
-      <div class="img-box"><img src="assets\logo3.jpg" alt="Design 29"></div>
-      <div class="img-box"><img src="assets\logo4.jpg" alt="Design 30"></div>
+      <div class="img-box"><img src="assets/logo1.jpg" alt="Design 27"></div>
+      <div class="img-box"><img src="assets/logo2.jpg" alt="Design 28"></div>
+      <div class="img-box"><img src="assets/logo3.jpg" alt="Design 29"></div>
+      <div class="img-box"><img src="assets/logo4.jpg" alt="Design 30"></div>
     </div>
   </section>
 </body>
 
 </html>
+
